Actualización del Título

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="./img/logo.png" width="30%" alt="Logo del Bazar" class="imglogo">
     </div>
     <div class="titulo">
-      <h1 class="h1">BazAR - En línea</h1>
+      <h1 class="h1">BazAR - On Line</h1>
       <h4>Todos los accesorios de tu cocina en un sólo lugar.</h4>
     </div>
     <div class="nav">
