--- a/productos_flexbox.html
+++ b/productos_flexbox.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
@@ -10,8 +11,9 @@
   <link rel="stylesheet" href="./css/estilo.css">
   <title>Productos con Flexbox</title>
 </head>
+
 <body>
-     <header>
+  <header>
     <div class="logo">
       <img src="./img/logo.png" width="30%" alt="Logo del Bazar" class="imglogo">
     </div>
@@ -24,43 +26,53 @@
         <ul>
           <li><a href="./index.html"><i class="fa-solid fa-house"></i></a></li>
           <li><a href="./productos.html">Productos</a></li>
-          <li>Servicios</li>
+          <li><a href="./api_resenia.html">Reseñas</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="./ubicacion.html">Ubicación</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
   <main>
     <div class="producto_flex">
       <div class="item_flex">
         <h3>Plato con Flores</h3>
         <img src="./img/plato-flores.webp" width="60%">
-        <button>Comprar</button>  
+        <button class="comprar" data-id="1" data-nombre="Plato círculos" data-precio="10.500">Comprar</button>
       </div>
-  
+
       <div class="item_flex">
         <h3>Plato con Flores</h3>
         <img src="./img/plato-grecas.webp" width="60%">
-        <button>Comprar</button>
+        <button class="comprar" data-id="2" data-nombre="Plato con flores" data-precio="15.3500">Comprar</button>
       </div>
 
       <div class="item_flex">
         <h3>Plato con Flores</h3>
         <img src="./img/plato_turquesa.png" width="60%">
-        <button>Comprar</button>
+        <button class="comprar" data-id="3" data-nombre="Plato Turquesa" data-precio="9.500">Comprar</button>
       </div>
       <div class="item_flex">
         <h3>Plato con Flores</h3>
         <img src="./img/circulos_rojos.png" width="60%">
-        <button>Comprar</button>
+        <button class="comprar" data-id="4" data-nombre="Plato rojos" data-precio="9.500">Comprar</button>
       </div>
     </div>
   </main>
+  <br>
+  <div id="carrito">
+    <h2>Carrito de Compras</h2>
+    <p>Total: $<span id="total-carrito">0</span></p>
+    <ul id="lista-carrito"></ul>
+  </div>
+  <div class="botones_flexbox">
+    <button id="btnPagar">Pagar</button>
+    <button id="vaciar-carrito">Vaciar Carrito</button>
+  </div>
+  <br>
   <a href="./productos.html">volver a Productos</a>
 
-    <footer>
+  <footer>
     <div class="iconos">
       <i class="fa-brands fa-instagram"></i>
       <i class="fa-brands fa-tiktok"></i>
@@ -71,6 +83,10 @@
           href="https://www.bazarcelta.com.ar/">Bazar Celta</a></small>
     </div>
   </footer>
-    
+
+
+  <script src="./js/tienda.js"></script>
+
 </body>
+
 </html>
