--- a/productos_grid.html
+++ b/productos_grid.html
@@ -26,31 +26,45 @@
         <ul>
           <li><a href="./index.html"><i class="fa-solid fa-house"></i></a></li>
           <li><a href="./productos.html">Productos</a></li>
-          <li>Servicios</li>
+          <li><a href="./api_resenia.html">Reseñas</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="./ubicacion.html">Ubicación</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
-
   <div class="grilla">
     <div class="item">
       <p>Plato Floreado oscuro</p>
       <img src="./img/plato-flores.webp" width="80%">
       <button>Comprar</button>
     </div>
-    <div class="item1">
+    <div class="item">
       <p>Plato Floreado claro</p>
       <img src="./img/plato-grecas.webp" width="80%">
       <button>Comprar</button>
     </div>
-    <div class="item2">
+    <div class="item">
       <p>Plato Circulos rojos</p>
       <img src="./img/circulos_rojos.png" width="80%">
       <button>Comprar</button>
     </div>
+    <div class="item">
+      <p>Plato Circulos rojos</p>
+      <img src="./img/set1.webp" width="80%">
+      <button>Comprar</button>
+    </div>
+    <div class="item">
+      <p>Plato Circulos rojos</p>
+      <img src="./img/set2.webp" width="80%">
+      <button>Comprar</button>
+    </div>
+    <div class="item">
+      <p>Plato Circulos rojos</p>
+      <img src="./img/plato-turquesa.jpg" width="80%">
+      <button>Comprar</button>
+    </div>
+    
   </div>
   <br>
   <a href="./productos.html">volver a productos</a>
