--- a/storage.html
+++ b/storage.html
@@ -6,7 +6,6 @@
  <link rel="stylesheet" href="./css/carrito.css">
  <title>Carrito de Compras</title>
 </head>
-
 <body>
   <h1>Tienda Online</h1>
 <div id="carrito">
@@ -15,14 +14,16 @@
     <ul id="lista-carrito"></ul>
 </div>
 <hr>
-<button class="comprar" data-id="1" data-nombre="Producto 1" data-precio="10">Comprar</button>
-<button class="comprar" data-id="2" data-nombre="Producto 2" data-precio="15">Comprar</button>
-<button class="comprar" data-id="3" data-nombre="Producto 3" data-precio="20">Comprar</button>
+<button class="comprar" data-id="1"
+data-nombre="Producto 1" data-precio="10">Comprar</button>
+<button class="comprar" data-id="2"
+data-nombre="Producto 2" data-precio="15">Comprar</button>
+<button class="comprar" data-id="3"
+data-nombre="Producto 3" data-precio="20">Comprar</button>
 
 <button id="btnPagar">Pagar</button>
 <button id="vaciar-carrito">Vaciar Carrito</button>
 
-<script src="./js/tienda.js"></script>
+<script src="./js/storage.js"></script>
 </body>
-
 </html>
