--- a/api_resenia.html
+++ b/api_resenia.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>Formulario de contacto</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -33,19 +35,17 @@
             </nav>
         </div>
     </header>
-    <hr>
-    <main>
-        <form action="https://formspree.io/f/mvgkjgyb" method="POST">
-            <input type="texto" name="Nombre" id="nombre" placeholder="Ingrese su nombre:">
-            <br>
-            <input type="email" name="Email" id="email" placeholder="Ingrese su email:">
-            <br>
-            <textarea name="Consulta:" rows="5" cols="30" placeholder="Escriba aquí su consulta: "></textarea>
-            <br>
-            <input type="submit" name="Submit" id="submit" placeholder="Enviar:">
-            <input type="reset" name="Reset" id="reset" placeholder="Restablecer:">
-        </form>
-    </main>
+
+    <section class="resenia">
+        <h1>Clientes satisfechos</h1>
+        <div class="container my-4 text-center">
+            <button class="btn-danger" onclick="traer()">Siguiente</button>
+        </div>
+        <div class="mt-5" id="contenido">
+              <!--Contenido recuperado con Fetch -->
+        </div>
+    </section>
+
     <footer>
         <div class="iconos">
             <i class="fa-brands fa-instagram"></i>
@@ -53,10 +53,12 @@
             <i class="fa-brands fa-telegram"></i>
         </div>
         <div class="firma">
-            <p>Matías Campos - 2025 | mati.campos@gmail.com</p> <small>La imágenes fueron tomadas de: <a
-                    href="https://www.bazarcelta.com.ar/">Bazar Celta</a></small>
+            <p>Matías Campos - 2025 | mati.campos@gmail.com</p> <small>La imágenes fueron tomadas de: <a href="https://www.bazarcelta.com.ar/">Bazar Celta</a></small>
         </div>
     </footer>
-
+    <script src="./js/api_resenia.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
 </body>
 </html>
