--- a/dom.html
+++ b/dom.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/estilo.css">
-  <title>Productos - BazAR - En línea</title>
+  <title>Document</title>
 </head>
 
 <body>
@@ -18,12 +19,12 @@
     </div>
     <div class="titulo">
       <h1 class="h1">BazAR - En línea</h1>
-      <h6>Todos los accesorios de tu cocina en un sólo lugar.</h6>
+      <h4>Todos los accesorios de tu cocina en un sólo lugar.</h4>
     </div>
     <div class="nav">
       <nav>
         <ul>
-          <li> <a href="./index.html"><i class="fa-solid fa-house"></i></a></li>
+          <li><a href="./index.html"><i class="fa-solid fa-house"></i></a></li>
           <li><a href="./productos.html">Productos</a></li>
           <li><a href="./api_resenia.html">Reseñas</a></li>
           <li><a href="contacto.html">Contacto</a></li>
@@ -32,13 +33,17 @@
       </nav>
     </div>
   </header>
-  <div class="botones_productos">
-    <a href="./productos_flexbox.html">con flexbox</a> 
-    <a href="./productos_bootstrap.html">con bootstrap</a>
-    <a href="./productos_grid.html"> con grid</a>
-    <a href="./api_fetch.html"> con API Fetch()</a>
-  </div>
- 
+
+  <h1 id="titulo">Bienvenido al DOM</h1>
+
+  <ul id="lista-js"> </ul>
+
+  <button id="btnAgregar">Comprar</button>
+  <button id="btnVaciar">Vaciar Carrito</button>
+
+
+
+
   <footer>
     <div class="iconos">
       <i class="fa-brands fa-instagram"></i>
@@ -50,10 +55,6 @@
           href="https://www.bazarcelta.com.ar/">Bazar Celta</a></small>
     </div>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
+<script src="./js/test.js"></script>
 </body>
-
 </html>
