--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="./index.html"><i class="fa-solid fa-house"></i></a></li>
           <li><a href="./productos.html">Productos</a></li>
-          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="./api_resenia.html">Reseñas</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="./ubicacion.html">Ubicación</a></li>
         </ul>
@@ -67,9 +67,8 @@
           href="https://www.bazarcelta.com.ar/">Bazar Celta</a></small>
       </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
+  <script src="./js/test.js"></script> 
 </body>
+
 
 </html>
