--- a/pago.html
+++ b/pago.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./css/estilo.css">
-  <title>Ubicación del Bazar</title>
+  <title>Document</title>
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <img src="./img/logo.png" alt="Logo del bazar, una olla de acero" width="30%">
+      <img src="./img/logo.png" width="30%" alt="Logo del Bazar" class="imglogo">
     </div>
     <div class="titulo">
       <h1 class="h1">BazAR - En línea</h1>
@@ -28,17 +30,32 @@
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="./ubicacion.html">Ubicación</a></li>
         </ul>
+      </nav>
     </div>
   </header>
 
-  <main>
-    <section>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12763.678070984544!2d-58.644881077965366!3d-34.593542243638666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1744922633023!5m2!1ses!2sar"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
-  </main>
+   <h1>Resumen de la compra</h1>
+    <main>
+        <div id="detalle"></div>
+    </main>
+<div class="form">
+    <form id="formulario" action="https://formspree.io/f/mvgkjgyb" method="POST">
+        <textarea id="carritoData" name="carrito" style="display:none;"></textarea>
+        <textarea id="totalCarrito" name="total" style="display:none;"></textarea>
+        <br>
+        <hr>
+        <label>Nombre completo</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Nombre completo" required>
+        <label>Email:</label>
+        <input type="email" id="contactoEmail" name="email" placeholder="Correo electrónico" required>
+        <label>Teléfono:</label>
+        <input type="tel" id="telefono" name="telefono" placeholder="Teléfono">
+        <br><br>
+        <button type="submit" id="botonEnviar">Confirmar Compra</button>
+    </form>
+</div>
+<br>
+<a href="./api_1.html">Regresar</a>
 
   <footer>
     <div class="iconos">
