--- a/plantilla.html
+++ b/plantilla.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="./index.html"><i class="fa-solid fa-house"></i></a></li>
           <li><a href="./productos.html">Productos</a></li>
-          <li>Ofertas</li>
+          <li><a href="./api_resenia.html">Reseñas</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="./ubicacion.html">Ubicación</a></li>
         </ul>
