Actualización a la rama main

--- a/api_resenia.html
+++ b/api_resenia.html
@@ -38,13 +38,13 @@
 
     <section class="resenia">
         <h1>Clientes satisfechos</h1>
-        <div class="container my-4 text-center">
-            <button class="btn-danger" onclick="traer()">Siguiente</button>
-        </div>
-        <div class="mt-5" id="contenido">
+        <div class="container my-4 text-center"></div>
+        <div class="mt-2" id="contenido">
               <!--Contenido recuperado con Fetch -->
         </div>
+        <button class="btn-danger" onclick="traer()">Siguiente</button>
     </section>
+    <br>
 
     <footer>
         <div class="iconos">
