estilo para fakestore

--- a/fakestore.html
+++ b/fakestore.html
@@ -34,6 +34,11 @@
     </div>
   </header>
 
+    <h1>Productos Disponibles</h1>
+  <div id="productos-container"></div>
+
+
+  <script src="./js/fakestore.js"></script>
   <footer>
     <div class="iconos">
       <i class="fa-brands fa-instagram"></i>
