--- a/api_1415.html
+++ b/api_1415.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/estilo.css">
   <title>Document</title>
 </head>
@@ -35,6 +34,18 @@
     </div>
   </header>
 
+    <section class="resenia">
+        <h1>Clientes satisfechos</h1>
+        <div class="container my-4 text-center"></div>
+        <div class="mt-2" id="contenido">
+              <!--Contenido recuperado con Fetch -->
+        </div>
+        <button class="btn-danger" onclick="traer()">Siguiente</button>
+    </section>
+    <br>
+
+  <script src="./js/api_1415.js"></script>
+
   <footer>
     <div class="iconos">
       <i class="fa-brands fa-instagram"></i>
@@ -46,8 +57,6 @@
           href="https://www.bazarcelta.com.ar/">Bazar Celta</a></small>
     </div>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
 </body>
 </html>
